# issue-condenser-agent

./: README.md  pyproject.toml
src/: main.py  prompt.py
src/conderser/: agent.py  data_extractor.py
src/schema/: commit.py  control.py  issue.py
src/wrappers/: commit_wrapper.py  issue_wrapper.py
