[project]
name = "issue-condenser"
version = "0.1.0"
description = ""
authors = [
    {name = "alireza",email = "alirezzzhp1378@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "issue_condenser", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
